<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/floatingButtonCardView"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textTitleFloatingButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/main_floating_button_title"
                                android:textAppearance="@android:style/TextAppearance.Material.Title" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Android 9+"
                                android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse" />
                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/buttonFloatingButtonSetting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="Settings"
                            android:src="@drawable/ic_settings"
                            android:visibility="gone" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switchFloatingButton"
                            style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/main_floating_button_title" />
                    </LinearLayout>



                    <TextView
                        android:id="@+id/textDescFloatingButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_floating_button_text"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1" />

                    <LinearLayout
                        android:id="@+id/floating_button_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_close_button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:singleLine="true"
                                android:text="@string/main_close_button_title"
                                android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/switchClosingButton"
                                style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/main_floating_button_title" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                android:id="@+id/textViewFloatingButtonScale"
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:text="@string/setting_floating_button_scale" />

                            <SeekBar
                                android:id="@+id/seekBarFloatingButtonScale"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:max="700"
                                android:min="50" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                android:id="@+id/textViewFloatingButtonAlpha"
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:text="@string/setting_floating_button_alpha" />

                            <SeekBar
                                android:id="@+id/seekBarFloatingButtonAlpha"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:max="100"
                                android:min="0" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                android:id="@+id/textViewFloatingButtonColor"
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:text="@string/setting_floating_button_color" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tv_R"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="R(0)" />

                                <SeekBar
                                    android:id="@+id/seekBarFloatingButtonColor_R"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:max="255"
                                    android:min="0" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="8dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tv_G"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="G(0)" />

                                <SeekBar
                                    android:id="@+id/seekBarFloatingButtonColor_G"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:max="255"
                                    android:min="0" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tv_B"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="B(0)" />

                                <SeekBar
                                    android:id="@+id/seekBarFloatingButtonColor_B"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:max="255"
                                    android:min="0" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/iv_float_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_snap" />

                            <ImageView
                                android:id="@+id/iv_close_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_close" />

                        </LinearLayout>


                        <Button
                            android:id="@+id/btn_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="Update" />
                    </LinearLayout>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/linearLayoutAssist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textTitleAssist"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/main_assist_app_title"
                                android:textAppearance="@android:style/TextAppearance.Material.Title" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Android 12+"
                                android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse" />
                        </LinearLayout>


                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switchAssist"
                            style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/main_assist_app_title" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/textDescAssist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_assist_app_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
